--- a/tictactoegame/1-tictactoe.html
+++ b/tictactoegame/1-tictactoe.html
@@ -45,15 +45,15 @@
 
 
     <div id="board">
-        <button class="square">H</button>
-        <button class="square">H</button>
-        <button class="square">H</button>
-        <button class="square">H</button>
-        <button class="square">H</button>
-        <button class="square">H</button>
-        <button class="square">H</button>
-        <button class="square">H</button>
-        <button class="square">H</button>
+        <button class="square diagonal1 column1 row1">_</button>
+        <button class="square column2 row1">_</button>
+        <button class="square diagonal2 column3 row1">_</button>
+        <button class="square column1 row2">_</button>
+        <button class="square diagonal2 diagonal1 column2 row2">_</button>
+        <button class="square column3 row2">_</button>
+        <button class="square diagonal2 column1 row3">_</button>
+        <button class="square column2 row3">_</button>
+        <button class="square diagonal1 column3 row3">_</button>
     </div>
   </body>
 </html>
