--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             color: black;
         }
     </style>
-    <script src="tictactoe.js"></script>
+    <script src="tictactoegame\tictactoe.js"></script>
   </head>
   <body>
     <header>
